GNOME Bugzilla – Bug 701762
libnm-glib: fix the object creation warning for remote connections
Last modified: 2013-06-08 15:27:36 UTC
I found this because I run libnm-glib master with system (0.9.8) NetworkManager, and fails accessing the new DBus properties.
Created attachment 246191 [details] [review] libnm-glib: fix the object creation warning for remote connections NMRemoteConnection is not a NMObject, so we need to go through GObject to get a DBus path.
Created attachment 246252 [details] [review] libnm-glib: fix the object creation warning for remote connections simpler version; does this work for you?
(In reply to comment #2) > Created an attachment (id=246252) [details] [review] > libnm-glib: fix the object creation warning for remote connections > > simpler version; does this work for you? Yep, it works.
Attachment 246252 [details] pushed as 3b498b3 - libnm-glib: fix the object creation warning for remote connections